# video-player

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  file_assoc.rs  hash.rs  lib.rs  main.rs
src-tauri/wix/: zh-CN.wxl
src/components/: ControlBar.vue  PlaybackPanel.vue  ProgressBar.vue  SearchOverlay.vue  SettingsPanel.vue  TagCard.vue
src/composables/: useMpv.ts  useSearch.ts  useTags.ts
src/styles/: main.css
src/utils/: format.ts
