[package]
name = "video-player"
version = "0.1.0"
description = "视频播放器 - libmpv 内核 + Tauri 2 + Vue 3"
authors = ["hjf"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "video_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-libmpv = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_Graphics_Gdi"] }
